# nikita123123123

./: .gitignore  Makefile  README.md  pyproject.toml
VD_games/scripts/: VD_even.py  VD_games.py  VD_main.py
src/vd_games/: VD_even.py  VD_games.py  VD_main.py  __init__.py  cli.py  engine.py
src/vd_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
src/vd_games/scripts/: VD_calc.py  VD_even.py.save  VD_gcd.py  VD_prime.py  VD_progression.py
