[project]
name = "vd-games"
version = "0.1.0"
description = "VD Games project"
authors = [{name = "Ваше Имя"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vd_games"]

# Правильная точка входа
[project.scripts]
VD-games = "vd_games.VD_games:main"
