[project]
name = "vd-games"
version = "0.1.0"
description = "VD Games project"
authors = [{name = "Ваше Имя"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "prompt>=0.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vd_games"]

[dependency-groups]
dev = [
    "ruff>=0.15.2",
]

[project.scripts]
VD-games = "vd_games.VD_main:main"
VD-even = "vd_games.VD_even:main"
VD-calc = "vd_games.scripts.VD_calc:main"
VD-gcd = "vd_games.scripts.VD_gcd:main"
